--- a/partials/header.html
+++ b/partials/header.html
@@ -3,7 +3,7 @@
     <a class="brand" href="/" aria-label="HESAA Home">
       <img src="https://static2.sharepointonline.com/files/fabric/assets/brand-icons/product/svg/office_48x1.svg"
            width="28" height="28" alt="">
-      <span>HESAA Web Requests</span>
+      <span>HESAA</span>
     </a>
 
     <nav aria-label="Primary" class="primary-nav">
