--- a/partials/header.html
+++ b/partials/header.html
@@ -1,8 +1,9 @@
 <header role="banner" class="site-header">
   <div class="wrap">
     <a class="brand" href="/" aria-label="HESAA Home">
-      <img src="https://static2.sharepointonline.com/files/fabric/assets/brand-icons/product/svg/office_48x1.svg"
-           width="28" height="28" alt="">
+      <<img src="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/MediaAssets/HESAALogo.png" 
+     alt="HESAA Logo" 
+     style="height:50px;"/>
       <span>HESAA</span>
     </a>
 
