--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,7 @@
 <header role="banner" class="site-header">
   <div class="wrap">
     <a class="brand" href="/" aria-label="HESAA Home">
-      <<img src="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/MediaAssets/HESAALogo.png" 
+      <img src="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/MediaAssets/HESAALogo.png" 
      alt="HESAA Logo" 
      style="height:50px;"/>
       <span>HESAA</span>
@@ -9,7 +9,7 @@
 
     <nav aria-label="Primary" class="primary-nav">
       <ul>
-        <li><a href="/"          data-active="home">Home</a></li>
+        <!--<li><a href="/"          data-active="home">Home</a></li>-->
         <li><a href="/students"  data-active="students">Students</a></li>
         <li><a href="/aboutus"   data-active="about">About</a></li>
         <li><a href="/contactus" data-active="contact">Contact</a></li>
