--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,7 @@
 <header role="banner" class="site-header">
   <div class="wrap">
     <a class="brand" href="/" aria-label="HESAA Home">
-      <img src="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/MediaAssets/HESAALogo.png" 
+      <img src="/assets/hesaa-logo.png" 
      alt="HESAA Logo" 
      style="height:50px;"/>
       <span>HESAA</span>
