--- a/partials/footer.html
+++ b/partials/footer.html
@@ -80,7 +80,8 @@
 
     <p class="ft-copy">© <span id="yr"></span> HESAA. All rights reserved.</p>
   </div>
-</footer>
-<script>
-  (function(){ const y=document.getElementById('yr'); if(y) y.textContent=new Date().getFullYear(); })();
+  <script>
+  (function(){ const y=document.getElementById('yr'); if(y) y.textContent=(new Date()).getFullYear(); })();
 </script>
+</footer>
+
