--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="wrap header-inner">
     <a class="brand" href="/">
-      <img src="/assets/logo.png" alt="HESAA" class="brand-logo" />
+      <img src="/assets/HESAALogo.png" alt="HESAA" class="brand-logo" />
     </a>
 
     <button class="nav-toggle" aria-label="Menu" aria-expanded="false" data-nav-toggle>
